--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&family=Victor+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>portfolio aida</title>
+    <title>Aida/title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
